<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.logonrm.configchar.PersonagemActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cabecalho">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_crie_seu_personagem"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="16dp"
        android:textStyle="bold"
        />

    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/cabecalho"
        android:layout_above="@+id/rodape"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_nome"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_sexo"/>

            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rbMenino"
                    android:layout_weight="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_menino"/>
                <RadioButton
                    android:id="@+id/rbMenina"
                    android:layout_weight="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_menina"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lable_classes"/>

            <Spinner
                android:entries="@array/classes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lable_forca"/>

            <SeekBar
                android:id="@+id/sbForcs"
                android:max="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btCriar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/botao_criar"/>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rodape"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/label_rodape"/>



    </RelativeLayout>


</RelativeLayout>
